@@ -67,6 +67,7 @@ static GtkListStore* clist_create(GtkWidget *widget)
 	for(i = COL_ADDR; i <= COL_ADDR; i++)
 	{
 		renderer = gtk_cell_renderer_text_new();
+		set_renderer_pad(renderer);
 		gtk_tree_view_insert_column_with_attributes(view, -1, 
             text[i], renderer, 
 			"font", COL_FONT,
